--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "ttm",
   "version": "0.1.0",
+  "engines": {
+    "node": "10.16.3"
+  },
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
