--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "bootstrap-reboot": "^4.3.1",
+    "jquery": "^3.4.1",
+    "node-sass": "^4.14.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-markdown": "^4.2.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "sass": "node-sass src/css/sass/index.sass src/css/index.css -w --output-style expanded"
   },
   "eslintConfig": {
     "extends": "react-app"
